<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"

    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".TemperatureConverter">

    <TextView
        android:id="@+id/label_convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:padding="5dp"
        android:text="@string/con_convert"/>


    <EditText
        android:inputType="numberDecimal"
        android:id="@+id/input"
        android:layout_width="150dp"
        android:freezesText="true"
        android:textSize="30dp"
        android:padding="5dp"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/label_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/con_from"
            android:textSize="30dp"
            android:padding="5dp" />

        <TextView
            android:id="@+id/label_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:text="@string/con_to"
            android:textSize="30dp"
            android:padding="5dp" />

        <RadioGroup
            android:id="@+id/from_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_from">
            <RadioButton
                android:id="@+id/from_temp_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:text="@string/temp_name_1"/>
            <RadioButton
                android:id="@+id/from_temp_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:text="@string/temp_name_2"/>
            <RadioButton
                android:id="@+id/from_temp_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:text="@string/temp_name_3"/>
            <RadioButton
                android:id="@+id/from_temp_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:text="@string/temp_name_4"/>
        </RadioGroup>

        <RadioGroup
            android:id="@+id/to_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_to"
            android:layout_alignLeft="@id/label_to"
            >
            <RadioButton
                android:id="@+id/to_temp_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:text="@string/temp_name_1"/>
            <RadioButton
                android:id="@+id/to_temp_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:text="@string/temp_name_2"/>
            <RadioButton
                android:id="@+id/to_temp_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:text="@string/temp_name_3"/>
            <RadioButton
                android:id="@+id/to_temp_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:text="@string/temp_name_4"/>
        </RadioGroup>

    </RelativeLayout>

    <Button
        android:id="@+id/convert_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert_button"
        android:textSize="30dp"
        android:padding="20dp"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:layout_gravity="center"
        android:padding="24dp"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/equation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:layout_gravity="center"
        android:padding="24dp"
        android:textSize="20dp"/>

</LinearLayout>
